--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@ header p {
   color: #ffffff;
   height: 500px;
   text-shadow: 0.25px 0.25px 0.25px #000000;
+  opacity: 0.6;
 }
 
 .jumbotron h2 {
