--- a/main.css
+++ b/main.css
@@ -1,10 +1,28 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu, "PT Sans", sans-serif;
   font-weight: 300;
 }
 
 header {
   padding: 20px 0;
+}
+
+a {
+  color: black;
+}
+
+ul {
+  list-style: none;
+}
+
+a:active {
+  color: gray;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: gray;
 }
 
 header .row,
@@ -14,8 +32,9 @@ footer .row {
 }
 
 header h1 {
-  font-weight: 700;
+  font-weight: 400;
   margin: 0;
+  font-family: Ubuntu, "PT Sans";
 }
 
 header nav {
@@ -26,29 +45,6 @@ header nav {
 header p {
   padding: 0 20px;
   margin: 0;
-}
-
-.jumbotron {
-  display: flex;
-  align-items: center;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
-  background-size: cover;
-  color: #ffffff;
-  height: 500px;
-  text-shadow: 0.25px 0.25px 0.25px #000000;
-  opacity: 0.6;
-}
-
-.jumbotron h2 {
-  font-size: 60px;
-  font-weight: 700;
-  margin: 0;
-  color: #fff;
-}
-
-.jumbotron h3 {
-  margin: 0 0 20px;
-  color: #fff;
 }
 
 section .row img {
