--- a/main.css
+++ b/main.css
@@ -93,7 +93,20 @@ footer ul {
   list-style: none;
 }
 
+footer a {
+  opacity: 0.6;
+}
+
+footer a:hover {
+  opacity: 1;
+}
+footer a:active {
+  opacity: 1;
+}
+footer a:active {
+  opacity: 1;
+}
+
 footer li img {
   width: 32px;
-  height: 32px;
 }
