--- a/css/slidejs.css
+++ b/css/slidejs.css
@@ -1,9 +1,3 @@
-body {
-  -webkit-font-smoothing: antialiased;
-  font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #232525;
-}
-
 #slides {
   display: none
 }
@@ -138,11 +132,17 @@ a:hover.slidesjs-stop {
   .container {
     width: 724px
   }
+  .container-slides {
+    width: 650px;
+  }
 }
 
 /* For larger displays */
 @media (min-width: 1200px) {
   .container {
     width: 1170px
+  }
+  .container-slides {
+    width: 650px;
   }
 }
