--- a/css/slidejs.css
+++ b/css/slidejs.css
@@ -1,5 +1,5 @@
 #slides {
-  display: none
+  display: none;
 }
 
 #slides .slidesjs-navigation {
@@ -102,47 +102,6 @@ a:hover.slidesjs-stop {
 }
 
 #slides {
-  display: none
-}
-
-.container {
-  margin: 0 auto
-}
-
-/* For tablets & smart phones */
-@media (max-width: 767px) {
-  body {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .container {
-    width: auto
-  }
-}
-
-/* For smartphones */
-@media (max-width: 480px) {
-  .container {
-    width: auto
-  }
-}
-
-/* For smaller displays like laptops */
-@media (min-width: 768px) and (max-width: 979px) {
-  .container {
-    width: 724px
-  }
-  .container-slides {
-    width: 650px;
-  }
-}
-
-/* For larger displays */
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px
-  }
-  .container-slides {
-    width: 650px;
-  }
+  display: none;
+  max-width: 650px;
 }
